tests/errors/semantics/increment_operand_not_arithmetic.c
// Operand of increment/decrement must be of arithmetic type
void main()
{
	char str[] = "str";
	str++;
}
